@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified" attributeFormDefault="unqualified">
+	<xs:element name="Element1">
+		<xs:complexType>
+			<xs:attributeGroup ref="Group"/>
+		</xs:complexType>
+	</xs:element>
+	<xs:element name="Element2">
+		<xs:complexType>
+			<xs:attributeGroup ref="Group"/>
+		</xs:complexType>
+	</xs:element>
+	<xs:attributeGroup name="Group">
+		<xs:attribute name="Attr">
+			<xs:simpleType>
+				<xs:restriction base="xs:string">
+					<xs:enumeration value="red"/>
+				</xs:restriction>
+			</xs:simpleType>
+		</xs:attribute>
+	</xs:attributeGroup>
+</xs:schema>
